--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -40,13 +40,13 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: >
-      cmake --build ${{github.workspace}}/build 
-      --config ${{env.BUILD_TYPE}}
-      --target clean
+      run: > 
+        cmake --build ${{github.workspace}}/build 
+        --config ${{env.BUILD_TYPE}} 
+        --target clean
 
     - name: Assemble LAPKT Python Package
-      -run: cmake --install  ${{github.workspace}}/build
+      run: cmake --install  ${{github.workspace}}/build
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
