Bugfix - Path to Release package corrected

--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -41,9 +41,7 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: > 
-        cmake --build ${{github.workspace}}/build 
-        --config ${{env.BUILD_TYPE}} 
-        --target clean
+        cmake --build ${{github.workspace}}/build
 
     - name: Assemble LAPKT Python Package
       run: cmake --install  ${{github.workspace}}/build
@@ -52,24 +50,24 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
-    - name: Test with ctest
-      run: |
-        ctest
+      run: ctest
 
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Pytest
       working-directory: ${{github.workspace}}/${{env.BUILD_TYPE}}
       run: |
         pytest
+        
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
