--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -24,6 +24,10 @@ jobs:
       run: | 
         rm -rf ${{github.workspace}}/build
         rm -rf ${{github.workspace}}/${{env.BUILD_TYPE}}
+    
+    - name: Install Dependencies
+      run: |
+        sudo apt-get install -y flex bison python3-dev python3
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -31,8 +35,8 @@ jobs:
       run: > 
         cmake -B ${{github.workspace}}/build 
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        -DCMAKE_FF=ON -DCMAKE_FD=OFF -DCMAKE_VAL=OFF
-        -DCMAKE_DOXYGEN_DOCS=ON -DCMAKE_DOXYGEN_FLAT_THEME=OFF -DCMAKE_DOXYGEN_AWESOME_THEME=OFF
+        -DCMAKE_FF=ON -DCMAKE_FD=ON -DCMAKE_VAL=ON
+        -DCMAKE_DOXYGEN_DOCS=ON -DCMAKE_DOXYGEN_FLAT_THEME=ON -DCMAKE_DOXYGEN_AWESOME_THEME=ON
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/${{env.BUILD_TYPE}}
         -DCMAKE_STATIC_BOOST=ON
