--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -27,7 +27,7 @@ jobs:
     
     - name: Install Dependencies
       run: |
-        sudo apt-get install -y flex bison python3-dev python3
+        sudo apt-get install -y flex bison python3-dev python3 libfl-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
