Bugfixed in VAL install path for cmake install build step

--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -36,7 +36,7 @@ jobs:
         cmake -B ${{github.workspace}}/build 
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         -DCMAKE_FF=ON -DCMAKE_FD=ON -DCMAKE_VAL=ON
-        -DCMAKE_DOXYGEN_DOCS=ON -DCMAKE_DOXYGEN_FLAT_THEME=ON -DCMAKE_DOXYGEN_AWESOME_THEME=ON
+        -DCMAKE_DOXYGEN_DOCS=OFF -DCMAKE_DOXYGEN_FLAT_THEME=OFF -DCMAKE_DOXYGEN_AWESOME_THEME=OFF
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/${{env.BUILD_TYPE}}
         -DCMAKE_STATIC_BOOST=ON
