Corrected the pytest working directory in workflow yaml

--- a/.github/workflows/ubuntu_build_test.yml
+++ b/.github/workflows/ubuntu_build_test.yml
@@ -68,7 +68,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Pytest
-      working-directory: ${{github.workspace}}/${{env.BUILD_TYPE}}
+      working-directory: ${{github.workspace}}
       run: |
         pytest
         
