--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ endfunction()
 #         ${Python3_VERSION})
 # endif()
 find_package(Python3 COMPONENTS Interpreter Development)
-if(${Python3_VERSION} LESS 3.7)
+if(${Python3_VERSION} VERSION_LESS 3.7.0)
     message(SEND_ERROR 
         "INCOMPATIBLE PYTHON VERSION, expected >3.7.x but found - " 
         ${Python3_VERSION})
