--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ examples/agnostic-examples/bfs_f/bfs
 examples/agnostic-examples/successor_generation/succ-gen
 
 # Local directories 
+external_package/VAL
 external_package/boost*
 external_package/clingo*
 external_package/doxygen*
