--- a/.github/workflows/macos_build_test.yml
+++ b/.github/workflows/macos_build_test.yml
@@ -27,7 +27,7 @@ jobs:
     
     - name: Install Dependencies
       run: |
-        sudo apt-get install -y flex bison python3-dev python3 libfl-dev
+        sudo brew install flex bison python3-dev python3 libffi
       
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
