--- a/.github/workflows/macos_build_test.yml
+++ b/.github/workflows/macos_build_test.yml
@@ -46,7 +46,7 @@ jobs:
       run: > 
         cmake -B ${{github.workspace}}/build 
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        -DCMAKE_FF=OFF -DCMAKE_FD=ON -DCMAKE_VAL=ON
+        -DCMAKE_FF=OFF -DCMAKE_FD=OFF -DCMAKE_VAL=OFF
         -DCMAKE_DOXYGEN_DOCS=OFF -DCMAKE_DOXYGEN_FLAT_THEME=OFF -DCMAKE_DOXYGEN_AWESOME_THEME=OFF
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/${{env.BUILD_TYPE}}
