--- a/src/pddl2strips/ff/CMakeLists.txt
+++ b/src/pddl2strips/ff/CMakeLists.txt
@@ -25,7 +25,7 @@ set_target_properties(ff_wrapper PROPERTIES
          LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/_pywrapper)
 set_target_properties(ff_wrapper PROPERTIES LINK_SEARCH_START_STATIC ON)
 set_target_properties(ff_wrapper PROPERTIES LINK_SEARCH_END_STATIC ON)
-target_link_libraries(ff_wrapper PRIVATE -static-libgcc -static-libstdc++)
+target_link_libraries(ff_wrapper PRIVATE -static-libstdc++)
 
 target_include_directories(ff_wrapper PRIVATE ${Python3_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
 target_link_libraries( ff_wrapper PRIVATE
