--- a/.github/workflows/macos_build_test.yml
+++ b/.github/workflows/macos_build_test.yml
@@ -29,10 +29,10 @@ jobs:
       run: |
         brew install flex bison python3 libffi
       
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: "3.9"
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
@@ -53,6 +53,7 @@ jobs:
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
         -DCMAKE_CXX_COMPILER=g++-11 -DCMAKE_C_COMPILER=gcc-11
+        -DBOOST_PYTHON_STATIC_LIB=ON
 
     - name: Build
       # Build your program with the given configuration
